--- a/css/scss/_layout.scss
+++ b/css/scss/_layout.scss
@@ -1,6 +1,7 @@
 .l-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   height: 100%;
 }
 
@@ -11,6 +12,12 @@
 }
 
 .l-example {
-  flex: 1;
+  width: 40%;
   padding: 20px 40px;
+}
+
+.l-result {
+  flex: 1 0 auto;
+  padding: 20px 40px;
+  text-align: center;
 }
